# elements

./: .clang-format  .editorconfig  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakeMain.txt  CMakePresets.json  README.md  index.html  news.md  search-index.js  sitemap.xml  toolchain-macos.cmake  vcpkg.json
examples/: CMakeLists.txt  CMakeMain.txt
examples/active_dynamic_list/: CMakeLists.txt  main.cpp
examples/active_list/: CMakeLists.txt  main.cpp
examples/adjustable_grid/: CMakeLists.txt  main.cpp
examples/aspects/: main.cpp
examples/basic_sliders_and_knobs/: CMakeLists.txt  main.cpp
examples/basic_sliders_and_knobs/resources/: config.json
examples/basics/: CMakeLists.txt  main.cpp
examples/basics/resources/: MainMenu.xib
examples/buttons/: CMakeLists.txt  main.cpp
examples/buttons/resources/: config.json
examples/child_window/: CMakeLists.txt  main.cpp
examples/cmake/: CMakeLists.txt
examples/concepts/: CMakeLists.txt  main.cpp
examples/custom_control/: CMakeLists.txt  main.cpp
examples/customcontrol/: CMakeLists.txt  main.cpp
examples/dialogs/: CMakeLists.txt  main.cpp
examples/dialogs/resources/: config.json
examples/doc_aspects/: CMakeLists.txt  main.cpp
examples/doc_aspects/resources/: config.json
examples/drop_file/: CMakeLists.txt  main.cpp
examples/dynamic/: main.cpp
examples/dynamic_list/: CMakeLists.txt  main.cpp
examples/dynamic_list_arranger/: CMakeLists.txt  main.cpp
examples/empty/: CMakeLists.txt  main.cpp
examples/empty/resources/: config.json
examples/file_dialog/: CMakeLists.txt  main.cpp
examples/grid_sizer/: CMakeLists.txt  main.cpp
examples/hello_pixmap_buffer_image/: CMakeLists.txt  main.cpp
examples/hello_universe/: CMakeLists.txt  main.cpp  plist.in
examples/hello_universe/resources/: config.json
examples/icons_list/: CMakeLists.txt  README.md  generate_enum.rb  main.cpp
examples/image/: CMakeLists.txt  main.cpp
examples/layout/: CMakeLists.txt  main.cpp
examples/layout/resources/: config.json
examples/list/: CMakeLists.txt  main.cpp
examples/list_arranger/: CMakeLists.txt  main.cpp
examples/menus/: CMakeLists.txt  main.cpp
examples/menus/resources/: config.json
examples/model/: CMakeLists.txt  main.cpp
examples/notebook/: CMakeLists.txt  main.cpp
examples/notebook/resources/: config.json
examples/popups/: CMakeLists.txt  main.cpp
examples/popups/resources/: config.json
examples/rain/: CMakeLists.txt  main.cpp
examples/range_slider/: CMakeLists.txt  main.cpp
examples/scale/: CMakeLists.txt  main.cpp
examples/scale/resources/: config.json
examples/selection_list/: CMakeLists.txt  main.cpp
examples/simple_animation/: CMakeLists.txt  main.cpp
examples/sliders/: CMakeLists.txt  main.cpp
examples/sliders_and_knobs/: CMakeLists.txt  main.cpp
examples/sliders_and_knobs/resources/: config.json
examples/sprite_sliders_and_knobs/: CMakeLists.txt  main.cpp
examples/sprite_sliders_and_knobs/resources/: config.json
examples/starter/: CMakeLists.txt  main.cpp
examples/status_bars/: CMakeLists.txt  main.cpp
examples/sync_scrollbars/: CMakeLists.txt  main.cpp
examples/table_list/: CMakeLists.txt  main.cpp
examples/tabs/: CMakeLists.txt  main.cpp
examples/tabs/resources/: config.json
examples/text_and_icons/: CMakeLists.txt  main.cpp
examples/text_and_icons/resources/: config.json
examples/text_edit/: CMakeLists.txt  main.cpp
examples/text_edit/resources/: MainMenu.xib  config.json
examples/text_edit_with_chinese_char/: CMakeLists.txt  main.cpp
examples/thumbwheels/: CMakeLists.txt  main.cpp
examples/tiles_aligns_and_spans/: CMakeLists.txt  main.cpp
examples/tiles_aligns_and_spans/resources/: MainMenu.xib  config.json
examples/tiles_and_aligns/: CMakeLists.txt  main.cpp
examples/tooltip/: CMakeLists.txt  main.cpp
examples/typography/: CMakeLists.txt  main.cpp
examples/typography/resources/: config.json
home/cmake/: CMakeLists.txt
host/: CMakeLists.txt  host.hpp  key.hpp
host/osx/: App.mm  MainMenu.xib  View.mm  key.mm  main.cpp  plist.in
lib/: CMakeLists.txt
lib/host/: .gitignore
lib/host/boiler_plate/: app.cpp  view.cpp
lib/host/gtk3/: app.cpp  base_view.cpp  key.cpp  window.cpp
lib/host/linux/: app.cpp  base_view.cpp  key.cpp  view.cpp  view_impl.hpp  window.cpp
lib/host/macos/: app.mm  base_view.mm  key.mm  window.mm
lib/host/wayland/: app.cpp  base_view.cpp  key.cpp  wayland_host.hpp  window.cpp
lib/host/windows/: app.cpp  base_view.cpp  drag_and_drop.cpp  drag_and_drop.hpp  key.cpp  utils.hpp  window.cpp
lib/host/x11/: app.cpp  base_view.cpp  key.cpp  window.cpp  x11_host.hpp
lib/include/: elemental.hpp  elements.hpp
lib/include/elemental/: app.hpp  element.hpp  support.hpp  window.hpp
lib/include/elements/: app.hpp  base_view.hpp  element.hpp  model.hpp  support.hpp  view.hpp  window.hpp
lib/src/: app.cpp  view.cpp
lib/src/element/: basics.cpp  busy_bar.cpp  button.cpp  child_window.cpp  composite.cpp  dial.cpp  drag_and_drop.cpp  dynamic.cpp  dynamic_list.cpp  element.cpp  floating.cpp  flow.cpp  gallery.cpp  grid.cpp  image.cpp  label.cpp  layer.cpp  list.cpp  menu.cpp  misc.cpp  popup.cpp  port.cpp  progress_bar.cpp  proxy.cpp  range_slider.cpp  selection.cpp  slider.cpp  status_bar.cpp  text.cpp  thumbwheel.cpp  tile.cpp  tooltip.cpp
lib/src/support/: canvas.cpp  draw_utils.cpp  error_handler.cpp  font.cpp  font_descr.cpp  font_descr_x.cpp  font_x.cpp  glyphs.cpp  io_context.cpp  log.cpp  payload.cpp  pixmap.cpp  receiver.cpp  rect.cpp  resource_paths.cpp  text_layout.cpp  text_layout_x.cpp  text_utils.cpp  theme.cpp  trace.cpp
photon_lib/: CMakeLists.txt
photon_lib/host/boiler_plate/: app.cpp  view.cpp
photon_lib/host/linux/: app.cpp  view.cpp  view_impl.hpp
photon_lib/host/macos/: app.mm  base_view.mm  key.mm  nsstring.h  view.mm  window.mm
photon_lib/host/osx/: App.mm  app.mm  key.mm  view.mm
photon_lib/include/: photon.hpp
photon_lib/src/: app.cpp  view.cpp
test/: CMakeLists.txt  demo.c  demo.h  example.cpp  main.cpp  panel_test.cpp  test.cpp  vtile_test.cpp
(+666 files in other folders)
