###############################################################################
#  Copyright (c) 2016-2020 Joel de Guzman
#-
#  Distributed under the MIT License (https://opensource.org/licenses/MIT)
###############################################################################

add_subdirectory(empty)
add_subdirectory(hello_universe)
add_subdirectory(text_and_icons)
add_subdirectory(buttons)
add_subdirectory(menus)
add_subdirectory(basic_sliders_and_knobs)
add_subdirectory(sprite_sliders_and_knobs)
add_subdirectory(text_edit)
add_subdirectory(layout)
add_subdirectory(popups)
add_subdirectory(dialogs)
add_subdirectory(scale)
add_subdirectory(notebook)
add_subdirectory(doc_aspects)
add_subdirectory(simple_animation)
add_subdirectory(thumbwheels)
add_subdirectory(tooltip)
add_subdirectory(dynamic_list)
add_subdirectory(custom_control)
add_subdirectory(child_window)

